upgrade mvn shade plugin